feat: added build

--- a/src/components/ExpensesFilter/ExpensesFilter.css
+++ b/src/components/ExpensesFilter/ExpensesFilter.css
@@ -22,3 +22,9 @@
   font-weight: bold;
   border-radius: 6px;
 }
+
+@media (max-width: 580px) {
+  .expenses-filter__control {
+    flex-direction: column;
+  }
+}
