--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -41,14 +41,27 @@
     align-items: center;
     justify-content: flex-start;
     flex: 1;
+    width: 50%;
   }
 
   .expense-item__description h2 {
     font-size: 1.25rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   .expense-item__price {
     font-size: 1.25rem;
     padding: 0.5rem 1.5rem;
+  }
+}
+
+@media (max-width: 280px) {
+  .expense-item__description h2 {
+    max-width: 100px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
