--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -24,3 +24,9 @@
 .new-expense__actions {
   text-align: right;
 }
+
+@media (max-width: 580px) {
+  .new-expense__control input {
+    width: 100% !important;
+  }
+}
